--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -2,13 +2,13 @@
   <h2>{{name}}</h2>
   <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
+  <p>Created by {{user.name}} on {{format_date user.createdAt}}</p>
+  {{!-- <p>
     <span for="img" aria-label="money">💲</span>
     <span class="dollar-amount">{{format_amount needed_funding}}</span>
     needed
-  </p>
+  </p> --}}
   <p>
-    <button class="btn btn-primary">Fund this Project!</button>
+    <button class="btn btn-primary">Fund this City!</button>
   </p>
 </div>
