--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,23 @@
-<!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
+<!-- Loop over each object in the cities array -->
+{{#each cities as |city| }}
+<div class="row mb-4 city">
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/city/{{city.id}}">{{city.city}}</a>
     </h2>
-    <p>
+    {{!-- <p>
       <span for="img" aria-label="money">💲</span>
       <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
+      <span class="dollar-amount">{{format_amount city.needed_funding}}</span>
       needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    </p> --}}
+    <p>Created by {{city.user.name}} on {{format_date city.createdAt}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{city.description}}
     </p>
   </div>
 </div>
