--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,8 +1,8 @@
 <div class="text-center">
   <h2>{{name}}</h2>
   <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date user.createdAt}}</p>
+  <p>{{population}}</p>
+  {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p> --}}
   {{!-- <p>
     <span for="img" aria-label="money">💲</span>
     <span class="dollar-amount">{{format_amount needed_funding}}</span>
