Lalo was driving for this section of the pair programming. We worked on creating the GET request to display city information when we search for them.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
         <a href="/">Finding My City!</a>
       </h1>
       <h2>
-        <form id="search" class="example" action="action_page.php">
+        <form id="search" class="example" action="cities/{{city.id}}">
           <input type="text" placeholder="Search.." name="search">
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
