Stephanie was in charge and we tried to fix the search bar, but no luck so we started changing the look of the website

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,11 +14,11 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        {{!-- <span role="img" aria-label="money">💸</span> --}}
-        <a href="/">Finding My City!</a>
+        <span role="img" aria-label="world">🌏</span>
+        <a href="/">Your dream trip is waiting!</a>
       </h1>
       <h2>
-        <form id="search" class="example" action="cities/{{city.id}}">
+        <form id="search" class="example" action="/action_page.php">
           <input type="text" placeholder="Search.." name="search">
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
