--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,7 +1,11 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{population}}</p>
+  <h2>{{city}}</h2>
+  <p>Population: {{population}}</p>
+  <p>Lanmarks: {{landmarks}}</p>
+  <p>Entertainment: {{entertainment}}</p>
+  <p>Excursion Type: {{excursion_type}}</p>
+  <p>Travel Season: {{travel_time}}</p>
+  <img class="someClass" src="{{img_url}}">
   {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p> --}}
   {{!-- <p>
     <span for="img" aria-label="money">💲</span>
