Lalo had control and found solution to images issues. Haven't implemented it yet. Started to work on profile.

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -5,7 +5,9 @@
   <p>Entertainment: {{entertainment}}</p>
   <p>Excursion Type: {{excursion_type}}</p>
   <p>Travel Season: {{travel_time}}</p>
+  <div id="t" style="display: none">
   <img class="someClass" src="{{img_url}}">
+  </div>
   {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p> --}}
   {{!-- <p>
     <span for="img" aria-label="money">💲</span>
