--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -44,5 +44,30 @@
   </div>
   {{/if}}
 </div>
+{{#each cities as |city| }}
+<div class="row mb-4 city">
+  <div class="col-md-5">
+    <h2>
+      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+      {{{get_emoji}}}
+      <a href="/city/{{city.id}}">{{city.city}}</a>
+    </h2>
+    <p>
+      <span for="img" aria-label="money">💲</span>
+      
+      <!-- Pass needed_funding value to the helper function -->
+      <span class="dollar-amount">{{format_amount city.needed_funding}}</span>
+      needed!
+    </p>
+    <p>Created by {{city.user.name}} on {{format_date city.createdAt}}</p>
+  </div>
+  <div class="col-md-7">
+    <p>
+      {{city.description}}
+    </p>
+  </div>
+</div>
+{{/each}}
 
-<script src="./js/profile.js"></script>
+
+<script src="../public/js/profile.js"></script>
