Alex had control and with the help of Andrew he lead us to the right track of getting the search bar to work

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -8,8 +8,8 @@
   <div id="t" style="display: none">
   <img class="someClass" src="{{img_url}}">
   </div>
-  {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p> --}}
-  {{!-- <p>
+  {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p>
+  <p>
     <span for="img" aria-label="money">💲</span>
     <span class="dollar-amount">{{format_amount needed_funding}}</span>
     needed
