Matt had control and with everyones help (and andrews) we finally got the search bar to work

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -15,6 +15,6 @@
     needed
   </p> --}}
   <p>
-    <button class="btn btn-primary">Fund this City!</button>
+    <button class="btn btn-primary">Add City to Profile</button>
   </p>
 </div>
