--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New City:</h3>
+    <h3>Let's Plan a Trip!</h3>
 
     <form class="form new-city-form">
       <div class="form-group">
@@ -14,11 +14,11 @@
         <input class="form-input" type="text" id="city-name" name="city-name" />
       </div>
       <div class="form-group">
-        <label for="city-funding">Average Cost of Trip:</label>
+        <label for="city-funding">How much I need to save:</label>
         <input class="form-input" type="number" id="city-funding" name="city-funding" />
       </div>
       <div class="form-group">
-        <label for="city-desc">Description:</label>
+        <label for="city-desc">My Adventure Plan:</label>
         <textarea class="form-input" id="city-desc" name="city-desc"></textarea>
       </div>
       <div class="form-group">
