--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,19 +1,13 @@
 <div class="text-center">
   <h2>{{city}}</h2>
   <p>Population: {{population}}</p>
-  <p>Lanmarks: {{landmarks}}</p>
+  <p>Landmarks: {{landmarks}}</p>
   <p>Entertainment: {{entertainment}}</p>
   <p>Excursion Type: {{excursion_type}}</p>
   <p>Travel Season: {{travel_time}}</p>
-  <div id="t" style="display: none">
-  <img class="someClass" src="{{img_url}}">
-  </div>
-  {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p> --}}
+  <img src="/images/{{city}}/{{image1}}" alt="Auckland Sky Tower"><br>
+  <img src="/images/{{city}}/{{image2}}" alt="Auckland Town Hall"><br>
+  <img src="/images/{{city}}/{{image3}}" alt="Auckland Mount Eden"><br>
   <p>
     <button class="btn btn-primary">Add City to Profile</button>
   </p>
