--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -5,15 +5,10 @@
   <p>Entertainment: {{entertainment}}</p>
   <p>Excursion Type: {{excursion_type}}</p>
   <p>Travel Season: {{travel_time}}</p>
-  <div id="t" style="display: none">
-  <img class="someClass" src="{{img_url}}">
-  </div>
-  {{!-- <p>Created by {{user.name}} on {{format_date user.createdAt}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p> --}}
+  <img src="/images/{{image1}}" alt="Auckland">
+  <img src="/images/{{image2}}" alt="Auckland">
+  <img src="/images/{{image3}}" alt="Auckland">
+
   <p>
     <button class="btn btn-primary">Add City to Profile</button>
   </p>
