--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="world">🌏</span>
-        <a href="/">Tripadviser</a>
+        <a href="/">Wish_Tripadvisor.V1</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
