styled the city details page and added README

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,18 @@ form.example::after {
   clear: both;
   display: table;
 }
+.cityname {
+  color: #996633 ;
+  font-style: italic;
+  font-size: 60px;
+}
+.cityDetails {
+ color: tomato;
+ font-family: cursive;
+ font-weight: bold;
+}
+
+body {
+  background: linear-gradient(to bottom, #33ccff, #ff9933);
+}
+
