--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -356,7 +356,8 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
   color: #1a1a1a;
 }
@@ -1009,7 +1010,7 @@ a:hover {
 }
 
 .btn.btn-primary {
-  background-color: #2d3e50;
+  background-color: tomato;
   color: #d9e9e8;
 }
 
@@ -1159,8 +1160,8 @@ form [type='radio'] {
   display: inline-block;
 }
 
-label form [type='checkbox'], label
-form [type='radio'] {
+label form [type='checkbox'],
+label form [type='radio'] {
   display: inline-block;
 }
 
@@ -1452,6 +1453,10 @@ form [type='radio'] {
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%;
+    border: 2px solid white;
+    box-sizing: border-box;
+    margin: 10px;
+    margin-left: 325px;
   }
   .col-md-7 {
     flex: 0 0 58.33333%;
