--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -1,8 +1,11 @@
-<div class="text-center">
+<div class="text-center" id="journalEntry">
   <h2>{{city}}</h2>
-  <p>Trip Name: {{name}}</p>
-  <p>how much: {{needed_funding}}</p>
-  <p>Adventures: {{description}}</p>
+  <h1 class="journalText" id="journalTitle">
+    My Travel Journal:
+  </h1><br><br>
+  <p class="journalText">Trip Name: {{name}}</p>
+  <p class="journalText">Required Savings: ${{needed_funding}}</p>
+  <p class="journalText">Planned Adventures: {{description}}</p>
   <div id="t" style="display: none">
   <img class="someClass" src="{{img_url}}">
   </div>
