--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,9 +1,9 @@
 
 <div class="text-center">
-  <h2>{{city}}</h2>
-  <p>Population: {{population}}</p>
-  <p>Landmarks: {{landmarks}}</p>
-  <p>Entertainment: {{entertainment}}</p>
-  <p>Excursion Type: {{excursion_type}}</p>
-  <p>Travel Season: {{travel_time}}</p>
+  <h2 class="cityName">{{city}}</h2>
+  <p class="cityDetails">Population: {{population}}</p>
+  <p class="cityDetails">Landmarks: {{landmarks}}</p>
+  <p class="cityDetails">Entertainment: {{entertainment}}</p>
+  <p class="cityDetails">Excursion Type: {{excursion_type}}</p>
+  <p class="cityDetails">Travel Season: {{travel_time}}</p>
   <img src="/images/{{city}}/{{image1}}" alt="{{image1Alt}}"><br>
