--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ form.example::after {
 }
 
 #titleLocation {
-  padding-left: 560px;
+  padding-left: 620px;
 }
 
 #appTitle {
@@ -78,7 +78,7 @@ form.example::after {
 
 #quickDescription {
   padding-top: 50px;
-  padding-left: 165px;
+  padding-left: 215px;
   font-size: 47px;
   color: white;
   font-family: cursive;
@@ -90,7 +90,7 @@ form.example::after {
 }
 
 #userFavs {
-  padding-left: 265px;
+  padding-left: 315px;
   padding-bottom: 25px;
 }
 
@@ -98,7 +98,6 @@ form.example::after {
   font-size: 47px;
   color: white;
   font-family: cursive;
-
 }
 
 #journalEntry {
@@ -138,3 +137,15 @@ body {
   font-weight: bolder;
 }
 
+.profileWelcome{
+  color: white;
+  font-family: cursive;
+  font-size: 40px;
+  margin-left: 475px;
+}
+
+#myJournalEntry {
+  color: white;
+  font-family: cursive;
+  font-size: larger;
+}
